Try overflow-wrap instead of word-break to avoid breaking on everything.

--- a/app.css
+++ b/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 .dialogue-text {
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 #edit-problem .choice-root {
